# Mobus_ESP_IDF

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  Mo-Bus.md  README.md  compile_commands.json  format.sh  image_convert_memo.txt  memo.md  memo.txt  partitions_two_ota.csv  platformio.ini  restart_usb.sh  sdkconfig  sdkconfig.ci  sdkconfig.defaults  sdkconfig.esp32dev  sdkconfig.esp32dev.old  sdkconfig.old  todo.md  view_flow.md
components/Display/: CMakeLists.txt
components/Display/include/: ARCHITECTURE.md  headupdaisy_font.hpp  images.hpp  misaki_font.hpp  mopping.h  oled.hpp  ui_strings.hpp
components/Display/include/app/contact/: domain.hpp  menu_view_service.hpp
components/Display/include/app/setting/: action_router.hpp  action_service.hpp  bluetooth_pairing_service.hpp  firmware_info_service.hpp  ota_manifest_service.hpp  (+1 more)
components/display/: CMakeLists.txt  component_stub.c
components/display/include/: ARCHITECTURE.md  images.hpp  ui_strings.hpp
components/display/include/display/: display_context.hpp  menu_display.hpp  oled_screen.hpp  profile_setting.hpp
components/display/src/: font_headupdaisy14x16.cpp  font_headupdaisy14x8.cpp  font_misaki_gothic16.cpp  font_misaki_gothic8.cpp
components/display/src/runtime/: bridge_entry.hpp  prelude.hpp
components/display/src/screens/: composer.hpp  composer_setting_game.hpp  contact_book.hpp  game.hpp  menu_display.hpp  menu_profile_oled.hpp  message_box.hpp  oled_view.hpp  open_chat.hpp  open_chat_wifi_p2p.hpp  p2p_display.hpp  profile_setting.hpp  setting_menu.hpp  talk_display.hpp  wifi_setting.hpp
components/wasm_runtime/: CMakeLists.txt
components/wasm_runtime/include/: wasm_game_runtime.hpp
(+234 files in other folders)
